@@ -22,7 +22,7 @@ noinst_HEADERS = \
 	fallback.h
 
 rcsslogplayer_classic_CPPFLAGS = $(CLASSIC_CPPFLAGS) -I$(top_srcdir)
-rcsslogplayer_classic_CXXFLAGS = $(CLASSIC_CXXFLAGS)
+rcsslogplayer_classic_CXXFLAGS = -Wall $(CLASSIC_CXXFLAGS)
 rcsslogplayer_classic_LDFLAGS = $(CLASSIC_LDFLAGS) -L$(top_builddir)/rcsslogplayer
 rcsslogplayer_classic_LDADD = $(CLASSIC_LIBS) -lrcssrcgparser $(BOOST_PROGRAM_OPTIONS_LIB)
 
