@@ -40,14 +40,6 @@
 #include "main_window.h"
 #include "options.h"
 
-class SleeperThread : public QThread {
-public:
-    static void msleep(unsigned long msecs)
-      {
-          QThread::msleep(msecs);
-      }
-};
-
 int
 main( int argc,
       char ** argv )
