@@ -1,0 +1,1 @@
+IDI_ICON1	ICON	DISCARDABLE	"../icon/rcss.ico"
