@@ -1,0 +1,21 @@
+
+TEMPLATE = subdirs
+SUBDIRS = rcsslogplayer qt4
+
+# Input
+DISPFILES += \
+             icons/blank.xpm \
+             icons/ff.xpm \
+             icons/go.xpm \
+             icons/minus.xpm \
+             icons/next_score.xpm \
+             icons/open.xpm \
+             icons/play.xpm \
+             icons/plus.xpm \
+             icons/prev_score.xpm \
+             icons/quit.xpm \
+             icons/rcss.xpm \
+             icons/rec.xpm \
+             icons/rev.xpm \
+             icons/rew.xpm \
+             icons/stop.xpm
